<resources>
    <string name="app_name">SilentMyPhone</string>
    <string name="choose_start_time">Mute start</string>
    <string name="dialog_action">Next</string>
    <string name="no_jobs_message">You don\'t have any mutes to show.</string>
    <string name="daily">Check if you want to repeat on different days</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursay</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="channel_name">my_channel</string>
    <string name="channel_description">channel description</string>
    <string name="local_service_started">1234</string>
    <string name="local_service_label">Sync service</string>
    <string name="local_calendar">Local calendar</string>
    <string name="today">Today</string>
    <string name="tommorow">Tommorow</string>
    <string name="action_setting">Settings</string>
    <string name="action_sync_calendar">Sync with calendars</string>
</resources>
