<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:animateLayoutChanges="true">

            <LinearLayout
                android:id="@+id/repeat_mode"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:background="#8e8c8c">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_height="match_parent"
                    android:textColor="#ffffff"
                    android:text="@string/daily"
                    android:gravity="center_horizontal|center_vertical"/>

                <CheckBox
                    android:id="@+id/checkbox_is_daily"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:gravity="center_horizontal|center_vertical"/>
            </LinearLayout>

            <HorizontalScrollView
                android:id="@+id/days_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/repeat_mode"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:text="@string/monday"
                        android:gravity="center_vertical|center_horizontal"/>
                    <CheckBox
                        android:id="@+id/checkbox_monday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:text="@string/tuesday"
                        android:gravity="center_vertical|center_horizontal"/>
                    <CheckBox
                        android:id="@+id/checkbox_tuesday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:text="@string/wednesday"
                        android:gravity="center_vertical|center_horizontal"/>
                    <CheckBox
                        android:id="@+id/checkbox_wednesday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:text="@string/thursday"
                        android:gravity="center_vertical|center_horizontal"/>
                    <CheckBox
                        android:id="@+id/checkbox_thursday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:text="@string/friday"
                        android:gravity="center_vertical|center_horizontal"/>
                    <CheckBox
                        android:id="@+id/checkbox_friday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:text="@string/saturday"
                        android:gravity="center_vertical|center_horizontal"/>
                    <CheckBox
                        android:id="@+id/checkbox_saturday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:text="@string/sunday"
                        android:gravity="center_vertical|center_horizontal"/>
                    <CheckBox
                        android:id="@+id/checkbox_sunday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </HorizontalScrollView>

            <TextView
                android:id="@+id/tv_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:gravity="center_horizontal"
                android:text="Start"
                android:textSize="32sp"
                android:textColor="#ffffff"
                app:layout_constraintTop_toBottomOf="@id/days_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TimePicker
                android:id="@+id/time_picker_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:timePickerMode="spinner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_start"></TimePicker>

            <NumberPicker
                android:id="@+id/day_picker_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/time_picker_start"
                app:layout_constraintEnd_toStartOf="@+id/time_picker_start"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/time_picker_start"></NumberPicker>

            <TextView
                android:id="@+id/tv_end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:gravity="center_horizontal"
                android:text="End"
                android:textSize="32sp"
                android:textColor="#ffffff"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/time_picker_start" />

            <TimePicker
                android:id="@+id/time_picker_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:timePickerMode="spinner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_end"></TimePicker>

            <NumberPicker
                android:id="@+id/day_picker_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/time_picker_end"
                app:layout_constraintEnd_toStartOf="@+id/time_picker_end"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/time_picker_end"></NumberPicker>

            <Button
                android:id="@+id/set_job_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#b9030d8f"
                android:text="Set"
                android:textColor="#ffffff"
                android:textSize="24sp"
                app:layout_constraintTop_toBottomOf="@id/time_picker_end" />
        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</LinearLayout>